objects/RCustomer__c.object
<CustomObject>
    <description>This object defines data related to customers associated to bank</description>
    <label>RCustomer</label>
    <nameField>
        <label>RCustomer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RCustomers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() )  -  YEAR( Date_of_Birth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RBank__c</fullName>
        <label>RBank</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RBank__c.Active_Status__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RBank__c</referenceTo>
        <relationshipLabel>RCustomers</relationshipLabel>
        <relationshipName>RCustomers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EMI_id__c</fullName>
        <label>EMI id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Loan</fullName>
                </value>
                <value>
                    <fullName>Home Loan</fullName>
                </value>
                <value>
                    <fullName>Gold Loan</fullName>
                </value>
                <value>
                    <fullName>Bike Loan</fullName>
                </value>
                <value>
                    <fullName>Company Loan</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Customer Phone Number</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Close_Date__c</fullName>
        <label>Loan Close Date</label>
        <type>Date</type>
    </fields>
</CustomObject>